# soft-moe

./: .gitignore  BRAINSTORM.md  CLAUDE.md  README.md  SCALED_RECIPE.md  pyproject.toml  reference  skills
.claude/: commands  security_protocols  settings.json
configs/data/: demix8.yaml  dev.yaml  dev_bytes.yaml  main.yaml  synth.yaml  toy.yaml
configs/eval/: default.yaml
configs/experiment/: ab_moe_g1_topk2.yaml  ab_moe_g2_nobal.yaml  ab_moe_g2_noz.yaml  ab_moe_g2_shared1.yaml  ab_moe_g2_shared2.yaml  ab_moe_g4.yaml  ab_moe_g8.yaml  cbtm.yaml  cbtm_dev.yaml  cmm_dense1x.yaml  cmm_dense5x.yaml  cmm_hardmoe.yaml  cmm_hardmoe_oracle.yaml  cmm_ours_alt.yaml  cmm_ours_seq.yaml  cmm_ours_sup_alt.yaml  cmm_ours_sup_seq.yaml  cmm_ours_unsup_alt.yaml  cmm_ours_unsup_alt20k.yaml  cmm_ours_unsup_seq.yaml  dense.yaml  dense_d256.yaml  dense_dev.yaml  em_gov_d256.yaml  em_gov_seqA_d256.yaml  em_prefix_d256.yaml  em_prefix_seqA_d256.yaml  gov_d128.yaml  gov_d256.yaml  gov_d384.yaml  gov_d512.yaml  gov_seqA_d128.yaml  gov_seqA_d256.yaml  gov_seqA_d384.yaml  gov_seqA_d512.yaml  govern_film_d256.yaml  govern_seqA_film_d256.yaml  govern_seqA_spectralA_d256.yaml  govern_seqA_spectralA_d512.yaml  govern_seqA_spectralA_r128_d512.yaml  (+70 more)
configs/model/: backbone_gpt2.yaml  backbone_pythia160m.yaml  backbone_tiny.yaml
configs/train/: em_alternate.yaml  em_hard.yaml  em_soft.yaml  from_scratch.yaml  from_scratch_alt.yaml  joint_mop.yaml  sc_alt.yaml  sc_dense.yaml  sc_moe.yaml  sc_phaseB.yaml  sc_warm_alt.yaml  supervised.yaml  token_em.yaml  warm_alt.yaml
mpcdf-hpc-skills/: CLAUDE.md  INSTALL.md  README.md
mpcdf-hpc-skills/.claude/: settings.json
mpcdf-hpc-skills/reference/: MPCDF-CLUSTER-FACTS.md  SLURM-REFERENCE.md
plan/: 01-data-collection.md  02-training.md  03-evaluation.md  README.md  THEORY.md
qwen_poc/: PERSONA_RESULTS.md  README.md  RESULTS.md  cyc_eval.sbatch  gen_persona.py  train.sbatch  train_sft.py
reports/: EXPERIMENTAL_SETUP.md  PRESENTATION_OUTLINE.md  README.md  SUMMARY.md
reports/capacity/: README.md  main_table.md  per_domain_ppl.md  results.csv
reports/cmm/: README.md  cross_routing_cmm.json  cross_routing_cmm.md  domain_analysis_dev_bytes.json  domain_analysis_dev_bytes.md  main_table.md  results.csv
reports/comparison/: main_table.md  per_domain_ppl.md  results.csv  routing_analysis.md
reports/convergence/: CONVERGENCE_RESULTS.md  conv.sbatch  conv_results.json  make_conv_figs.py
reports/em-expert-tokens/: EM_VS_SFT.md  (+9 more)
scripts/: analyze_domains.py  build_chat_data.py  build_data.py  build_knowledge_data.py  cross_routing.py  evaluate.py  make_capacity_figure.py  make_comparison_figures.py  make_report.py  make_t_ablation.py  mech_interp.py  scaling.py  train.py  validate_qwen.py
tests/: conftest.py  test_alternation.py  test_data.py  test_losses.py  test_metrics.py  test_model.py  test_smoke_e2e.py
(+182 files in other folders)
